# matmake2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Matmakefile  Readme.md  build-linux.sh  build-win-clang.bat  build-win-gcc.bat  build-win-msvc.bat  matmake.cpp  matmake.json
.github/workflows/: c-cpp.yml  ubuntu-cmake.yml  ubuntu-self-build-clang.yml  ubuntu-self-build-gcc.yml  ubuntu-self-build.yml  windows-msvc-buildscript  windows-msvc-buildscript.yml  windows.yml
cmake/: gcc.cmake  msvc.cmake
demos/dynamiclib/: Matmakefile
demos/dynamiclib/lib/: lib.cpp  lib.h
demos/modules/: Matmakefile  matmake.json  tasks.json
demos/modules/src/: main.cpp  other.cppm  other2.cppm
demos/project1/: Matmakefile  matmake.json  tasks.json
demos/project1/data/: Readme.md
demos/project1/include/: other.h
demos/project1/src/: main.cpp  other.cpp  other.h  precompiled.h  precompiled.hpp
demos/staticlib/: Matmakefile
demos/staticlib/src/: main.cpp
scripts/: vs-cross-env.sh
src/: coordinator.h  createtasks.h  defaultfile.cpp  defaultfile.h  env.cpp  env.h  exampleproject.cpp  exampleproject.h  execute.cpp  execute.h  filesystem.h  line.h  main.cpp  makefile.cpp  makefile.h  matmakefile.cpp  matmakefile.h  msvcenvironment.cpp  msvcenvironment.h  nativecommands.cpp  nativecommands.h  ninja.cpp  ninja.h  os.cpp  os.h  parsedepfile.h  parsematmakefile.cpp  parsematmakefile.h  precompiled.h  prescan.h  processedcommand.h  property.h  settings.cpp  settings.h  sourcetype.h  targetnode.h  task.cpp  task.h  tasklist.cpp  tasklist.h  (+4 more)
src/main/: main.cpp
test/: build_test.cpp  parse_matmakefile_test.cpp  task_test.cpp
